# eigengames

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json
contracts/src/: ITangleTaskManager.sol  TangleTaskManager.sol
db/: 22e8b348-7088-4525-9b37-9eb37cb032d5  3d85272e-617f-4eb1-9ca8-e1ea85a63237  6041dbf7-5ab1-4b7d-86ab-7939ef89a3b8  8e80c800-7dab-4ad6-9a77-82dfe8030f3d  d51ea3f3-824c-49cb-b9f6-8a4bada515f7
src/: actix_server.rs  error.rs  gaia_manager.rs  lib.rs  main.rs  manager.rs  runner.rs  types.rs
src/actix_server/: gaia_client.rs  server.rs  types.rs
src/contexts/: client.rs
src/dynamic_rag/: rag.rs
src/qdrant/: mod.rs  qdrant_client.rs  utils.rs
test/: README.md  bun.lockb  index.ts  package.json
test_tx/: bun.lockb  index.ts  package.json
tests/: qdrant_client_test.rs
vector_data/: nipa_primer.txt
