[package]
name = "my-eigenlayer-avs-1"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3.26"
openai_dive = "0.6"
actix-web = "4.9.0"
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", default-features = false, features = [
  "std",
  "eigenlayer",
  "evm",
  "macros",
  "build",
] }
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1", features = ["io-util", "process", "rt", "macros"] }
color-eyre = "0.6.3"
nix = "0.29.0"
sysinfo = "0.33.1"
serde_json = "1.0.139"
networking = "0.1.9"
url = "2.5.4"
dirs = "6.0.0"
which = "7.0.2"
anyhow = "1.0.96"
qdrant-client = "1.13.0"
pdf-extract = "0.8.2"
eigensdk = { version = "0.4.0", features = ["full"] }
tracing = "0.1.41"
reqwest = "0.12.12"
alloy-rpc-client = "0.11.1"

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", default-features = false, features = [
  "std",
  "build",
] }

[features]
default = ["std"]
std = ["blueprint-sdk/std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "my-eigenlayer-avs-1"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "TangleTaskManager" }

[[package.metadata.gadget.Native.sources]]
owner = "hanpham32"
repo = "my-eigenlayer-avs-1"
tag = "0.1.0"
binaries = [
  { arch = "Amd64", os = "Linux", name = "amd64-linux-my-eigenlayer-avs-1-gadget" },
  { arch = "Arm64", os = "Linux", name = "arm64-linux-my-eigenlayer-avs-1-gadget" },
]
